# 39-lesson

1-task/: .gitignore  CMakeLists.txt  main.qml
2-task/: CMakeLists.txt  main.cpp
